<resources>
    <string name="app_name">Trivia</string>
    <string name="out_of_txt">Question : 45/89</string>
    <string name="title_txt">Trivia</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="placeholder">Hey there, Your quize will not going to start, it stucked !</string>
    <string name="correct">correct !!</string>
    <string name="incorrect">incorrect :(</string>
</resources>